# ShardBrowser

./: .gitignore  CLAUDE.md  README.md  package-lock.json  runtime.json
.github/workflows/: release.yml
docs/: team-server.md
sdks/node/: README.md  package.json
sdks/node/src/: browser.ts  index.ts  profile.ts  runtime.ts
sdks/python/: README.md  pyproject.toml
sdks/python/shardx/: __init__.py  browser.py  runtime.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: quickstart.rs
sdks/rust/src/: auto_resolve.rs  browser.rs  control.rs  geo.rs  host.rs  lib.rs  profile.rs  proxy.rs  randomize.rs  runtime.rs  screen.rs
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
server/migrations/: 0001_init.sql  0002_lock_token_and_token_version.sql
server/src/: audit.rs  auth.rs  blob.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs  util.rs
server/src/routes/: acl.rs  envs.rs  folders.rs  locks.rs  mod.rs  proxies.rs  users.rs
server/tests/: e2e_sync.rs
shared/: Cargo.toml
shared/src/: cookies.rs  lib.rs  logins.rs  oscrypt.rs  portable.rs  snapshot.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: launch.rs  lib.rs  process.rs  profile.rs  proxy_auth.rs  runtime.rs  settings.rs  sync.rs
