[package]
name = "shardx-team-server"
version = "0.1.0"
edition = "2021"
description = "Self-hosted team server for ShardX: users/roles, shared environments, checkout locks."

[[bin]]
name = "shardx-team-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
# End-to-end test: drive the real server binary the way the launcher's sync.rs
# does (reqwest multipart) + pack/unpack via the shared crate.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
shardx-core = { path = "../shared" }
